--- a/br-webui/test/test-query-usb.html
+++ b/br-webui/test/test-query-usb.html
@@ -1,7 +1,6 @@
 <script>
     var companionDevices =
     {
-
         "Video" : {
             "searchPattern":"/dev/video*",
             "devices": {}
@@ -28,12 +27,13 @@
     }
 
     function handleUdevadmResponse(deviceType, response) {
-        console.log("got query response", deviceType, response);
         // response.target refers to the XMLHttpRequest object ('xhr')
         // wait for readyState == 4 ~ "Done"
         if (response.target.readyState != 4) {
             return null;
         }
+
+        console.log("got udevadm query response", deviceType, response);
 
         usbInfo = JSON.parse(response.target.response);
         
